[package]
name = "piston2d_playground"
version = "0.1.0"
authors = ["Chris Novick <c.r.novick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
piston_window = "0.105.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.31.0"
piston2d-sprite = "0.58.0"
image = "0.22.1"
piston2d-drag_controller = "0.29.0"
piston2d-deform_grid = "0.5.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.31.0"
rand = "0.6.0"
shader_version = "0.6.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
